# PathfinderIQ-Demo-Version

./: .dockerignore  .gitignore  AUTODEV.md  Dockerfile.unified  OPEN_TELCO_DATASETS.md  README.md  deploy_app.sh
app/backend/: pyproject.toml
app/backend/agentkit/: GETTING_STARTED.md  README.md  __init__.py  pyproject.toml
app/backend/agentkit/app/: README.md  __init__.py  agent_app.py  quickstart.py
app/backend/agentkit/cloud/: README.md  __init__.py  credentials.py
app/backend/agentkit/config/: README.md  __init__.py  request_scope.py  settings.py
app/backend/agentkit/contracts/: README.md  __init__.py  envelope.py  errors.py  models.py
app/backend/agentkit/core/: README.md  __init__.py  _protocols.py  agent_builder.py  builder.py  compaction.py  config_loader.py  middleware.py  prompt_loader.py  reflection.py  registry.py  tool_resolver.py
app/backend/agentkit/dev_tools/: README.md  __init__.py  dev_sign.py  sse_contract_probe.py
app/backend/agentkit/examples/: __init__.py
app/backend/agentkit/guardrails/: README.md  __init__.py  _registry.py  _runner.py
app/backend/agentkit/hosting/: README.md  __init__.py  abort_registry.py  completion.py  event_mapping.py  probe.py  run_engine.py  run_loop.py
app/backend/agentkit/observability/: README.md  __init__.py  _bootstrap.py  _logging.py  _metrics.py  _middleware.py  _tracing.py
app/backend/agentkit/persistence/: README.md  __init__.py  cosmos.py  memory.py  protocol.py
app/backend/agentkit/resilience/: README.md  __init__.py
app/backend/agentkit/sdk/: README.md  __init__.py  azure_client.py  maf_client.py
app/backend/agentkit/tokens/: README.md  __init__.py
app/backend/agentkit/tools/: README.md  __init__.py
app/backend/agentkit/validation/: README.md  __init__.py  tool_guard.py
app/backend/agents/: __init__.py  _builder.py  _config.py  _prompts.py  _tools.py
app/backend/app/: __init__.py  _middleware.py  auth.py  deps.py  main.py
app/backend/app/capability/: __init__.py  build.py  search.py
app/backend/app/foundation/: __init__.py  _lifecycle.py  abort_registry.py  boot_validation.py  config.py  credentials.py  errors.py  log_broadcaster.py  models.py  request_context.py  request_scope.py  retry.py  session_broadcaster.py
app/backend/app/guardrails/: __init__.py  _registry.py  _runner.py
app/backend/app/llmops/: __init__.py  _cost.py  _manager.py  _protocol.py
app/backend/app/observability/: __init__.py  _bootstrap.py  _logging.py  _metrics.py  _middleware.py  _tracing.py
app/backend/app/routers/: __init__.py  agents.py  auth_setup.py  catalog.py  chat.py  config.py  feedback.py  health.py  observability.py  preferences.py  scenario.py  service_health.py  sessions.py
app/backend/app/scenario/: __init__.py  _catalog.py  _deployment_registry.py  _metadata.py  _reader.py  _registry.py
app/backend/app/services/: __init__.py  agent_run_state.py  preferences.py
app/backend/scripts/: lint_imports.py
app/backend/tests/: conftest.py
app/backend/tests/contract/: test_session_contract.py  test_sse_events.py  test_type_parity.py
app/backend/tests/integration/: conftest.py  test_agent_prompt.py  test_auth_flow.py  test_auth_routes.py  test_chat_streaming.py  test_conversation_flow.py  test_cosmos_session_lifecycle.py  test_endpoint_auth_gate.py  test_feedback.py  test_health.py  test_multi_agent_e2e.py  test_scenario_asset_auth.py  test_scenario_global_state_bug.py  test_scenario_swap_proof.py  test_scenario_user_isolation.py  test_session_lifecycle.py  test_session_user_id.py
app/backend/tests/isolation/: conftest.py  test_page_refresh_isolation.py  test_restart_defaults.py
app/backend/tests/unit/: test_abort_cascade.py  test_agent_config_correctness.py  test_agent_identity_isolation.py  test_agent_run_state.py  test_agents_router.py  test_audit_phase1.py  test_audit_phase2.py  test_audit_phase3.py  test_auth.py  test_auto_title.py  test_circuit_breaker.py  test_context_injection.py  test_conversation_context.py  test_conversation_lifecycle.py  test_conversation_metadata.py  test_conversation_observability.py  test_conversation_turn.py  test_cosmos_guards.py  test_cosmos_session_store.py  test_delegation_tool.py  test_error_sanitization.py  test_error_taxonomy.py  test_flat_agent_config.py  test_guardrail_framework.py  test_guardrails.py  test_health_depth.py  test_keepalive.py  test_llm_agent_helpers.py  test_llmops_cost.py  test_llmops_jsonl.py  test_llmops_manager.py  test_llmops_protocol.py  test_loader.py  test_math_tools.py  test_models.py  test_observability_noop_imports.py  test_query_guardrails.py  test_retry.py  test_search_tools_phase2.py  test_session_state_manager.py  (+14 more)
app/backend/tools/: __init__.py  _cosmos.py  _fabric_auth.py  _fabric_throttle.py  _spoof_state.py  capability.py  email.py  math_tools.py  options.py  sandbox.py  thinking.py  time_tools.py
graph_data/: .gitignore  azure.yaml  azure_config.env.template  deploy_infra.sh  pyproject.toml  pyrightconfig.json
graph_data/eval/: cases.yaml  run_eval.py
graph_data/eval/results/: SUMMARY.md  backhaul-n3-flap__run0.json  benign-clock-drift__run0.json  demand-congestion-no-fault__run0.json  fronthaul-urllc-breach__run0.json  midhaul-f1-congestion__run0.json  mmtc-signaling-storm__run0.json  pci-collision-rrc__run0.json
graph_data/hooks/: postprovision.sh  preprovision.sh
graph_data/infra/: app-main.bicep  app-main.bicepparam  app-main.json  main.bicep  main.bicepparam
graph_data/infra/modules/: ai-foundry.bicep  container-app-job.bicep  container-app.bicep  cosmos-private-endpoints.bicep  cosmos-sessions.bicep  key-vault.bicep  roles.bicep  storage.bicep  storage.json  vnet.bicep
graph_data/scripts/: __init__.py  check_narrative_consistency.py  deploy_graph.py  deploy_search.py  deploy_telemetry.py  generate_oran_dataset.py  generate_oran_knowledge.py  generate_topology.py  provision_scenario.py  seed_cosmos.py  validate_scenario.py
graph_data/scripts/azureaisearch/: __init__.py  deploy_scenario.py  provision_search_index.py
graph_data/scripts/fabric/: _deploy_client.py  deploy_scenario.py
(+491 files in other folders)
