[project]
name = "llm-chat-backend"
version = "0.1.0"
description = "Model pattern: LLM conversational API with FastAPI"
requires-python = ">=3.11"
dependencies = [
    "aiohttp",
    "async-timeout>=4.0.0",
    "fastapi==0.131.0",
    "uvicorn[standard]==0.41.0",
    "pydantic==2.12.5",
    "pydantic-settings==2.13.1",
    "openai>=1.99.0",
    "tiktoken>=0.7.0",
    "sse-starlette==3.2.0",
    "httpx==0.28.1",
    "python-dotenv==1.2.1",
    "pyyaml==6.0.3",
    "agent-framework==1.0.0rc1",
    "agent-framework-core==1.0.0rc1",
    "agent-framework-azure-ai==1.0.0rc1",
    "agent-framework-azure-ai-search==1.0.0b260219",
    "agent-framework-orchestrations==1.0.0b260219",
    "opentelemetry-semantic-conventions-ai==0.4.13",
    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "opentelemetry-instrumentation-logging>=0.48b0",
    "azure-monitor-opentelemetry-exporter>=1.0.0b31",
    "python-json-logger>=2.0.7",
    "azure-identity==1.26.0b2",
    "azure-keyvault-secrets>=4.10.0",
    "azure-ai-agents==1.2.0b5",
    "azure-ai-projects==2.0.0b3",
    "azure-cosmos>=4.9.0",
    "azure-search-documents>=11.6.0",
    "azure-storage-blob>=12.24.0",
    "azure-mgmt-storage>=21.0.0",
    "azure-mgmt-authorization>=4.0.0",
    "azure-mgmt-search>=9.0.0",
    "azure-kusto-data==6.0.2",
    "gremlinpython==3.8.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-timeout>=2.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Pure logic tests, no I/O",
    "contract: SSE event schema validation",
    "integration: FastAPI TestClient with mock services",
    "acceptance: End-to-end against live backend (slow)",
    "cosmos: Requires live Cosmos DB endpoint",
]
timeout = 60
timeout_method = "thread"
